--- a/mail_api/config/clients.yml
+++ b/mail_api/config/clients.yml
@@ -15,7 +15,7 @@
 #     recipient_env: "CLIENT_MIJN_ANDERE_SITE_RECIPIENT"
 
 anne_weinans:
-  name: "Anne Weinans Praktijk"
+  name: "Anne Weinans"
   api_key_env: "CLIENT_ANNE_WEINANS_KEY"
   recipient_env: "CLIENT_ANNE_WEINANS_RECIPIENT"
   confirmation_message: "Hartelijk dank voor je bericht. Ik heb het goed ontvangen en neem zo spoedig mogelijk contact met je op, doorgaans binnen twee werkdagen."
